2021-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Assignment to / from global variables with non-free hl.

2021-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/ralloc.c,
	  src/stm8/main.c,
	  src/stm8/ralloc.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/ralloc.c:
	  Fix initialization of asmops for use of aopArg in _reg_parm.

2021-06-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genPcall): fix bug #2994
	* support/regression/tests/bug-2993.c: reenable for mcs51-huge

2021-06-28 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCglue.c:
	  Fix bug #3253: patch by Oleg Endo

2021-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Experimental __newcall calling convention.
	* src/z80/peeph.def,
	  src/z80/peep.c:
	  Fix peephole rule 49a for Rabbits.

2021-06-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (genFunction): possible fix for bug #3199

2021-06-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (optimizeSWAP): fix bug #3218

2021-06-26 Visenri
	* support/regression/tests/bug2686159.c:
	  Added support for pdk in test bug2686159.

2021-06-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genlshFixed): fix bug #3072

2021-06-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (aopPut, genSwap): fix bug #3188
	* support/regression/tests/rotate2.c: reenable mcs51 stack-auto tests

2021-06-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peep.c (doPushScan): added param instr,
	  added removeDeadPushPop()
	* src/mcs51/peeph.def: moved rules 301-302 to 302-303, added rule 301
	* support/regression/Makefile.in: introduced results/*.sum
	* support/regression/tests/wchar.c: subdivided in several cases to allow